--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,8 @@ dependencies = [
     "pyyaml>=6.0",
     "typer>=0.9.0",
     "textual>=0.50.0",
+    "tree-sitter>=0.25.0",
+    "tree-sitter-yaml>=0.6.0",
     "textual-plotext>=1.0.1",
     "rich>=13.0.0",
     "pydantic>=2.0.0",
